<resources>
    <string name="app_name" translatable="false">DumScore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="discover_all_about_sport">Discover all about sport</string>
    <string name="search_millions">Search millions of jobs and get the inside scoop on companies. Wait for what? Let’s get start it!</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="mbappe_on_welcome_fragment" translatable="false">mbappe_on_welcome_fragment</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="line" translatable="false">line</string>
    <string name="hide_password" translatable="false">hide_password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up_caps">sign up</string>
    <string name="success">Success</string>
    <string name="skip_btn">Skip</string>
    <string name="continue_btn">Continue</string>
    <string name="what_sport_do_you_interest">What sport do you interest?</string>
    <string name="you_can_choose">You can choose more than one</string>
    <string name="sporticon" translatable="false">sportIcon</string>
    <string name="choose_language">Choose language</string>


</resources>